--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
     <a href="https://dexscreener.com/base/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c" class="button">Dexscreener (Base)</a>
     <a href="https://dexscreener.com/solana/r8yrxkchf7ch6udta78qv8oth3png4e8k1cx6pgh4to" class="button">Dexscreener (Solana)</a>
   </div>
+<div class="section">
+  <h2>$ZOOP Live Chart</h2>
+  <iframe 
+    src="https://dexscreener.com/base/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c" 
+    width="100%" 
+    height="600" 
+    style="border: none; border-radius: 10px; overflow: hidden;" 
+    allowfullscreen 
+    loading="lazy">
+  </iframe>
+</div>
 
   <div class="section">
     <h2>DAO-Governed Charity</h2>
