--- a/index.html
+++ b/index.html
@@ -115,15 +115,13 @@
   </div>
 <div class="section">
   <h2>$ZOOP Live Chart</h2>
-  <iframe 
-    src="https://dexscreener.com/base/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c" 
-    width="100%" 
-    height="600" 
-    style="border: none; border-radius: 10px; overflow: hidden;" 
-    allowfullscreen 
-    loading="lazy">
-  </iframe>
+  <a href="https://dexscreener.com/base/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c" target="_blank">
+    <img src="https://api.dexscreener.com/latest/dex/pairs/base/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c/chart" 
+         alt="Live $ZOOP Chart on Dexscreener" 
+         style="max-width: 100%; border-radius: 10px; box-shadow: 0 0 20px #00ffcc;">
+  </a>
 </div>
+
 
   <div class="section">
     <h2>DAO-Governed Charity</h2>
