--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div class="section">
   <h2>$ZOOP Live Chart</h2>
   <a href="https://dexscreener.com/base/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c" target="_blank" class="button">
-    View on Dexscreener
+    Live $ZOOP Price
   </a>
 </div>
 
