--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,13 +56,20 @@
 </head>
 <body>
   <h1>BAZOOP ($ZOOP)</h1>
-  <p>The interstellar meme coin of the future — live on <strong>Base</strong> and <strong>Solana</strong>.</p>
-  <p>33B total supply (Base) | Solana chain launched May 2025 | 5% founder wallet (locked)</p><a class="button" href="https://dexscreener.com/solana/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">Chart on DexScreener (SOL)</a> <a class="button" href="https://jup.ag/swap/SOL-ZOOP" target="_blank">Buy on Solana (via Jupiter)</a> <a class="button" href="https://dexscreener.com/base/[your_base_pair_address]" target="_blank">Chart on DexScreener (Base)</a>
+  <p>The interstellar meme coin of the future — now live on <strong>Base</strong> and <strong>Solana</strong>.</p>
+  <p><strong>Base Supply:</strong> 33B<br><strong>Solana Supply:</strong> 1B<br><strong>Founder Wallet:</strong> 5% (locked)</p>
+
+  <a class="button" href="https://dexscreener.com/base/0x4bb4f7c6ee0db9c21a1d093be92ae3ff50279ea0" target="_blank">Chart on DexScreener (Base)</a>
+  <a class="button" href="https://dexscreener.com/solana/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">Chart on DexScreener (Solana)</a>
+  <a class="button" href="https://jup.ag/swap/SOL-ZOOP" target="_blank">Buy on Solana (Jupiter)</a>
 
   <div class="social-icons">
     <a href="https://x.com/BazoopToken" target="_blank">X (Twitter)</a>
     <a href="https://t.me/BazoopToken" target="_blank">Telegram</a>
     <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
-  </div>  <iframe src="https://aletheialabs.github.io/bazoop-token/BAZOOP%20WHITEPAPER%20v1.0.pdf"></iframe>
+    <a href="https://solscan.io/token/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">Solscan</a>
+  </div>
+
+  <iframe src="https://aletheialabs.github.io/bazoop-token/BAZOOP%20WHITEPAPER%20v1.0.pdf"></iframe>
 </body>
 </html>
