--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <p>04.2025 – Staking & NFT Integration</p>
   <p>06.2025 – CEX Listings + Charity Expansion</p>  <div class="social-icons">
     <a href="https://x.com/BazoopToken" target="_blank">X (Twitter)</a>
-    <a href="https://t.me/BazoopToken" target="_blank">Telegram</a>
+    <a href="https://t.me/+OBFRK30XVKc3MDMx" target="_blank">Telegram</a>
     <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
     <a href="https://solscan.io/token/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">Solscan</a>
   </div>  <p><a class="button" href="BAZOOP%20WHITEPAPER%20v1.0.pdf" target="_blank">Open White Paper (PDF)</a></p>  <footer>
