--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +36,7 @@
       font-weight: bold;
       text-decoration: none;
       border-radius: 8px;
+      transition: background 0.2s;
     }
     .button:hover {
       background-color: #00cc77;
@@ -47,26 +49,41 @@
       color: #00ff99;
       font-size: 1.5rem;
       text-decoration: none;
+      transition: color 0.2s;
+    }
+    .social-icons a:hover {
+      color: #fff;
     }
     canvas {
       margin: 2rem auto;
       max-width: 500px;
+      background: #111;
+      border-radius: 1rem;
     }
     footer {
       margin-top: 4rem;
       font-size: small;
+      color: #44ffb0;
+    }
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      .button { padding: 0.75rem 1.2rem; font-size: 0.95rem; }
+      canvas { max-width: 90vw; }
     }
   </style>
 </head>
 <body>
   <h1>BAZOOP ($ZOOP)</h1>
   <p>The interstellar meme coin of the future — live on <strong>Base</strong> and <strong>Solana</strong>.</p>
-  <p><strong>Base Supply:</strong> 33B | <strong>Solana Supply:</strong> 1B | <strong>Founder Wallet:</strong> 5% (locked)</p><a class="button" href="https://dexscreener.com/base/0x4bb9b3cfc81bbda1f381c23d8e33ab6f8f069ea0" target="_blank">DexScreener (Base)</a> <a class="button" href="https://dexscreener.com/solana/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">DexScreener (Solana)</a> <a class="button" href="https://jup.ag/tokens/8kfNv8FpfXpLvorQQKF6HBC5GPPVkpUjGSyYVSCLpump" target="_blank">Buy on Jupiter</a>
+  <p><strong>Base Supply:</strong> 33B | <strong>Solana Supply:</strong> 1B | <strong>Founder Wallet:</strong> 5% (locked)</p>
+  <a class="button" href="https://dexscreener.com/base/0x4bb9b3cfc81bbda1f381c23d8e33ab6f8f069ea0" target="_blank">DexScreener (Base)</a>
+  <a class="button" href="https://dexscreener.com/solana/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">DexScreener (Solana)</a>
+  <a class="button" href="https://jup.ag/tokens/8kfNv8FpfXpLvorQQKF6HBC5GPPVkpUjGSyYVSCLpump" target="_blank">Buy on Jupiter</a>
 
   <h2>Tokenomics</h2>
   <canvas id="tokenomicsChart"></canvas>
   <script>
-    const ctx = document.getElementById('tokenomicsChart');
+    const ctx = document.getElementById('tokenomicsChart').getContext('2d');
     new Chart(ctx, {
       type: 'pie',
       data: {
@@ -84,18 +101,27 @@
         }
       }
     });
-  </script>  <h2>DAO-Governed Charity</h2>
+  </script>
+  <h2>DAO-Governed Charity</h2>
   <p>Each month, $ZOOP holders vote on where charity funds go — true decentralized impact.</p>
-  <a class="button" href="https://snapshot.org/#/" target="_blank">Vote on Snapshot</a>  <h2>Flight Path</h2>
+  <a class="button" href="https://snapshot.org/#/" target="_blank">Vote on Snapshot</a>
+
+  <h2>Flight Path</h2>
   <p>02.2025 – Launch on Base & Solana</p>
   <p>03.2025 – DAO Voting + Airdrops</p>
   <p>04.2025 – Staking & NFT Integration</p>
-  <p>06.2025 – CEX Listings + Charity Expansion</p>  <div class="social-icons">
+  <p>06.2025 – CEX Listings + Charity Expansion</p>
+
+  <div class="social-icons">
     <a href="https://x.com/BazoopToken" target="_blank">X (Twitter)</a>
     <a href="https://t.me/+OBFRK30XVKc3MDMx" target="_blank">Telegram</a>
     <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
     <a href="https://solscan.io/token/9ipnMxY12YBNR4bE76hE9sJGEbcEsGBbTJpP71XNmoon" target="_blank">Solscan</a>
-  </div>  <p><a class="button" href="BAZOOP%20WHITEPAPER%20v1.0.pdf" target="_blank">Open White Paper (PDF)</a></p>  <footer>
+  </div>
+  <p>
+    <a class="button" href="whitepaper.pdf" target="_blank">Open White Paper (PDF)</a>
+  </p>
+  <footer>
     <p>Built by Aletheia Labs | Follow us @BazoopToken</p>
   </footer>
 </body>
