--- a/index.html
+++ b/index.html
@@ -3,176 +3,181 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BAZOOP ($ZOOP) | Beam Wealth. Blast Charity. Meme Responsibly.</title>
+  <title>BAZOOP ($ZOOP) — The Meme Coin That Gives a ZOOP</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      background: radial-gradient(ellipse at center, #0b1929 0%, #181c18 100%);
-      color: #a8ff60;
+      background: radial-gradient(ellipse at top, #222 0%, #0a0a0a 100%);
+      color: #00ff99;
       font-family: 'Orbitron', Arial, sans-serif;
-      text-align: center;
-      padding: 0 0 2rem 0;
       margin: 0;
+      text-align: center;
+      padding: 0 1rem;
+      min-height: 100vh;
     }
-    .logo {
-      width: 260px;
-      margin: 2.5rem auto 1rem auto;
+    header {
+      margin-top: 2rem;
+    }
+    .main-logo {
+      width: 210px;
+      height: auto;
+      margin: 0 auto 1.2rem auto;
       display: block;
+      border-radius: 1.5rem;
+      box-shadow: 0 6px 32px #005c2a66;
+    }
+    .slogan {
+      color: #39ff14;
+      font-size: 1.35rem;
+      margin: 0.5rem 0 2.5rem 0;
+      font-weight: bold;
+      letter-spacing: 0.04em;
     }
     h1 {
-      font-size: 2.8rem;
       color: #fff;
-      letter-spacing: 2px;
-      margin-bottom: 0.3rem;
-      margin-top: 0.5rem;
+      font-size: 2.4rem;
+      margin-bottom: 0.7rem;
     }
-    .tagline {
-      color: #39ff14;
-      font-size: 1.2rem;
-      margin-bottom: 1.5rem;
-      letter-spacing: 1.5px;
+    .tokenomics-info {
+      font-size: 1.15rem;
+      color: #e0ffe6;
+      margin-bottom: 1.8rem;
+    }
+    .chart-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem auto 2.5rem auto;
+      width: 100%;
+    }
+    @media (max-width: 500px) {
+      .main-logo {
+        width: 92vw;
+        max-width: 250px;
+      }
+      .chart-container {
+        max-width: 100vw;
+      }
+      #tokenomicsChart {
+        max-width: 94vw !important;
+        height: auto !important;
+      }
     }
     .button {
       display: inline-block;
-      margin: 0.7rem 0.5rem;
-      padding: 1rem 2rem;
-      background-color: #39ff14;
-      color: #0a0a0a;
+      margin: 0.5rem 0.4rem;
+      padding: 0.95rem 2.1rem;
+      background-color: #00ff99;
+      color: #000;
       font-size: 1rem;
       font-weight: bold;
       text-decoration: none;
-      border-radius: 8px;
-      box-shadow: 0 2px 18px #39ff1466;
-      transition: background 0.2s;
+      border-radius: 9px;
+      box-shadow: 0 2px 16px #00ff9940;
+      transition: background 0.13s;
     }
     .button:hover {
-      background-color: #1cf67a;
-      color: #333;
+      background-color: #39ff14;
+      color: #111;
     }
-    .social-icons {
-      margin: 2rem 0 1rem 0;
+    .socials {
+      margin: 2.5rem 0 2rem 0;
       font-size: 1.3rem;
     }
-    .social-icons a {
-      margin: 0 1.5rem;
-      color: #fff;
+    .socials a {
+      margin: 0 0.9rem;
+      color: #00ff99;
       text-decoration: none;
-      font-weight: bold;
-      transition: color 0.2s;
+      font-weight: 700;
+      letter-spacing: 0.04em;
+      border-bottom: 1.5px dotted #22882255;
+      transition: color 0.14s;
     }
-    .social-icons a:hover {
+    .socials a:hover {
       color: #39ff14;
     }
-    h2 {
-      color: #fff;
-      font-size: 2rem;
-      margin-top: 3rem;
-    }
-    .info {
-      margin: 1.2rem auto 2rem auto;
-      color: #fff;
-      background: #21293b77;
-      display: inline-block;
-      padding: 1.1rem 2.2rem;
-      border-radius: 1rem;
-      font-size: 1.05rem;
-      line-height: 1.7;
-      box-shadow: 0 2px 18px #1624366b;
-    }
-    .tokenomics-table {
-      margin: 2rem auto;
-      width: 90%;
-      max-width: 500px;
-      border-collapse: collapse;
-      font-size: 1rem;
-    }
-    .tokenomics-table th, .tokenomics-table td {
-      border: 1px solid #39ff14;
-      padding: 0.6rem 0.8rem;
-      background: #18252b;
-    }
-    .tokenomics-table th {
-      background: #222;
-      color: #39ff14;
-    }
-    .tokenomics-table td {
-      color: #fff;
-    }
-    .section {
-      margin-top: 3.2rem;
-      margin-bottom: 1.5rem;
-    }
-    canvas {
-      margin-top: 1.5rem;
-      max-width: 400px;
-      background: #0a1320;
-      border-radius: 2rem;
-      box-shadow: 0 2px 20px #0c2d2280;
-    }
-    .alien-img {
-      width: 150px;
-      margin: 2rem auto 0 auto;
+    .alien-mascot {
+      margin: 0.5rem auto 2rem auto;
+      width: 110px;
+      max-width: 40vw;
       border-radius: 50%;
-      border: 3px solid #39ff14;
-      box-shadow: 0 2px 24px #0f0;
+      box-shadow: 0 3px 19px #1dffbb25;
       display: block;
     }
-    footer {
-      margin-top: 5rem;
-      padding-bottom: 2rem;
-      color: #a8ff60;
-      font-size: 0.9rem;
-      opacity: 0.7;
+    .section-title {
+      font-size: 2rem;
+      color: #00ff99;
+      margin-bottom: 0.5rem;
     }
-    @media (max-width: 700px) {
-      .logo { width: 180px; }
-      h1 { font-size: 2rem; }
-      h2 { font-size: 1.4rem; }
-      .info { padding: 1rem 1rem; font-size: 0.95rem; }
-      .alien-img { width: 90px; }
+    .roadmap {
+      margin: 2.7rem 0 2.5rem 0;
+    }
+    .roadmap-phase {
+      background: #111c;
+      display: inline-block;
+      margin: 0.3rem 0.7rem;
+      padding: 0.7rem 1.7rem;
+      border-radius: 10px;
+      color: #baffce;
+      font-weight: bold;
+      box-shadow: 0 1px 8px #39ff1444;
+    }
+    .footer {
+      color: #d0ffd7;
+      margin-top: 2.7rem;
+      font-size: 0.98rem;
+      opacity: 0.85;
     }
   </style>
 </head>
 <body>
-  <!-- Main UFO Logo -->
-  <img src="logo.png" alt="BAZOOP UFO Logo" class="logo" />
-  <h1>BAZOOP ($ZOOP)</h1>
-  <div class="tagline">Beam Wealth. Blast Charity. Meme Responsibly.</div>
-  <div class="info">
-    <p>
-      The interstellar meme coin on <b>Base</b> — engineered to go viral, reward early holders, and beam real charity back to Earth. <br>
-      <b>Token Supply:</b> 33,000,000,000 &bull; <b>Chain:</b> Base (8453)
-    </p>
-    <p>
-      <b>Contract Address:</b>
-      <br>
-      <a href="https://basescan.org/address/0xd6aa74b7d3c416a1fea5f84b8949409ac428708c" style="color:#39ff14" target="_blank">
-        0xd6aa74b7d3c416a1fea5f84b8949409ac428708c
-      </a>
-    </p>
-  </div>
-  <a class="button" href="https://app.uniswap.org/#/swap?outputCurrency=0xd6aa74b7d3c416a1fea5f84b8949409ac428708c&chain=base" target="_blank">Buy on Uniswap (Base)</a>
-  <a class="button" href="https://dexscreener.com/base/0x4bb9b3cfc81bbda1f381c23d8e33ab6f8f069ea0" target="_blank">DexScreener Chart</a>
-  <a class="button" href="whitepaper.pdf" target="_blank">Read Whitepaper (PDF)</a>
+  <header>
+    <img src="https://aletheialabs.github.io/bazoop-token/Bazoop%20Logo.png" alt="BAZOOP UFO Logo" class="main-logo">
+    <div class="slogan">Beam Wealth. Blast Charity. Meme Responsibly.</div>
+    <h1>BAZOOP ($ZOOP)</h1>
+    <div class="tokenomics-info">
+      <strong>Total Supply:</strong> 33,000,000,000 (Base)<br>
+      <strong>Founder Wallet:</strong> 5% (locked) &bull; <strong>Tokenomics:</strong> LP 50% / Treasury 20% / Marketing 15% / Charity 10% / Founder 5%
+    </div>
+    <a class="button" href="https://dexscreener.com/base/0x4bb9b3cfc81bbda1f381c23d8e33ab6f8f069ea0" target="_blank">View on DexScreener</a>
+    <a class="button" href="https://app.uniswap.org/#/swap?outputCurrency=0xD6Aa74b7d3C416A1Fea5F84b8949409aC428708C&chain=base" target="_blank">Buy on Uniswap</a>
+    <a class="button" href="whitepaper.pdf" target="_blank">White Paper (PDF)</a>
+  </header>
 
-  <div class="social-icons">
-    <a href="https://x.com/BaZoopToken" target="_blank">X (Twitter)</a>
-    <a href="https://t.me/+OBFRK30XVKc3MDMx" target="_blank">Telegram</a>
+  <div class="section">
+    <div class="section-title">Tokenomics</div>
+    <div class="chart-container">
+      <canvas id="tokenomicsChart" width="340" height="340"></canvas>
+    </div>
   </div>
 
   <div class="section">
-    <h2>Tokenomics</h2>
-    <table class="tokenomics-table">
-      <tr><th>Allocation</th><th>Tokens</th><th>%</th></tr>
-      <tr><td>Liquidity Pool</td><td>16,500,000,000</td><td>50%</td></tr>
-      <tr><td>Treasury</td><td>6,600,000,000</td><td>20%</td></tr>
-      <tr><td>Marketing</td><td>4,950,000,000</td><td>15%</td></tr>
-      <tr><td>Charity Wallet</td><td>3,300,000,000</td><td>10%</td></tr>
-      <tr><td>Founder Reserve</td><td>1,650,000,000</td><td>5%</td></tr>
-    </table>
-    <canvas id="tokenomicsChart" width="400" height="400"></canvas>
+    <div class="section-title">DAO-Governed Charity</div>
+    <p>Each month, $ZOOP holders vote on where the charity funds go — true decentralized impact, visible on-chain.</p>
+    <a class="button" href="https://snapshot.org/#/" target="_blank">Vote on Snapshot</a>
   </div>
+
+  <!-- Optional Alien mascot: comment out if not wanted -->
+  <img src="https://aletheialabs.github.io/bazoop-token/GrnICGRW4AA4vz0.jpg" alt="Alien Mascot" class="alien-mascot">
+
+  <div class="roadmap">
+    <div class="section-title">Flight Path</div>
+    <div class="roadmap-phase">02.2025 – Launch on Base</div>
+    <div class="roadmap-phase">03.2025 – DAO Voting + Airdrops</div>
+    <div class="roadmap-phase">04.2025 – Staking & NFT Integration</div>
+    <div class="roadmap-phase">06.2025 – CEX Listings + Charity Expansion</div>
+  </div>
+
+  <div class="socials">
+    <a href="https://x.com/BaZoopToken" target="_blank">X (Twitter)</a>
+    <a href="https://t.me/+OBFRK30XVKc3MDMx" target="_blank">Telegram</a>
+    <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
+  </div>
+
+  <footer class="footer">
+    Built by Aletheia Labs &bull; Meme responsibly. Not financial advice.
+  </footer>
 
   <script>
     const ctx = document.getElementById('tokenomicsChart').getContext('2d');
@@ -182,43 +187,17 @@
         labels: ['Liquidity Pool', 'Treasury', 'Marketing', 'Charity Wallet', 'Founder Reserve'],
         datasets: [{
           data: [50, 20, 15, 10, 5],
-          backgroundColor: ['#39ff14', '#2ad672', '#16b979', '#005a42', '#00f79e'],
-          borderColor: '#222',
-          borderWidth: 2
+          backgroundColor: ['#39ff14', '#66ff66', '#228822', '#117755', '#004422']
         }]
       },
       options: {
         plugins: {
           legend: {
-            labels: { color: '#39ff14', font: { size: 14 } }
+            labels: { color: '#00ff66', font: { size: 15, family: "'Orbitron', Arial, sans-serif" } }
           }
         }
       }
     });
   </script>
-
-  <div class="section">
-    <h2>DAO-Governed Charity</h2>
-    <p>
-      Every month, $ZOOP holders vote where the charity funds go. True decentralized impact.<br>
-      <b>Charity wallet:</b> 10% of supply. <br>
-      <a class="button" href="https://snapshot.org/#/" target="_blank">Vote on Snapshot</a>
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>Flight Path (Roadmap)</h2>
-    <ul style="list-style:none; color:#fff; font-size:1.12rem; padding-left:0;">
-      <li>Q2 2025: Token deployed on Base, website + whitepaper live</li>
-      <li>Q3 2025: DAO charity voting begins, NFT drop, DAO tooling</li>
-      <li>Q4 2025: Merch launch, partnerships, meme tool</li>
-    </ul>
-  </div>
-
-  <img src="GrnICGRW4AA4vz0.jpg" alt="ZOOP Alien Mascot" class="alien-img" />
-
-  <footer>
-    <p>Built by Aletheia Labs | Beam Wealth. Blast Charity. Meme Responsibly.<br>Follow us <a href="https://x.com/BaZoopToken" style="color:#39ff14" target="_blank">@BaZoopToken</a></p>
-  </footer>
 </body>
 </html>
